@@ -1,127 +1,319 @@
-# CameraViewerTauri
+# 相机显示软件
 
-工业相机 Web 界面显示工具，基于 Tauri 2.x + Vanilla HTML/JS/CSS 构建。
+基于 Java + Swing/FlatLaf + MQTT + QuickJS 的相机/测量数据可视化桌面应用。
 
-当前版本：**26.9.16**
+## 功能
 
-## 功能特性
+- 主界面 2×2 四宫格，每格独立显示一路画面。
+- 每路画面通过 MQTT 订阅图像、测量数据、日志三类消息。
+- 支持为每路画面编写 JavaScript 脚本，解析 XML 数据并调用内置脚本函数。
+- 设置界面配置每格的 MQTT 参数与显示选项。
+- 脚本编辑器支持语法高亮、测试数据、控制台输出与预览。
+- 配置以 JSON 形式保存在 jar 同目录。
 
-- **相机显示**：支持 1-16 画面网格布局，可配置延时刷新，支持锁定/解锁（锁定状态持久化到配置文件，重启后自动恢复）、最大化、备注等功能
-- **文件转存**：监听文件夹，按自定义规则自动解析文件名并转存到目标目录
-- **图片清理**：按保留天数或剩余磁盘空间策略自动清理过期图片
-- **图像压缩**：监听文件夹自动将 BMP/PNG/JPEG 压缩为 AVIF 格式，支持断电续传、暂停/继续
-- **FTP 服务器**：内置 FTP 服务，可配置端口、TLS、多用户及根目录；上传文件时自动递归创建目标目录（类似 FileZilla）
-- **NTP 时间服务器**：内置 NTP 服务，可为局域网设备提供时间同步
-- **JOBX 作业备份**：配置相机 FTP 信息，手动或批量备份 JOBX 相机文件到本地目录
-- **安全设置**：一键开启/关闭 Windows 防火墙；一键开启/关闭 UAC 弹窗（修改注册表后需重启生效）
-- **显示设置**：
-  - **窗口镜像**：使用 Windows DWM 缩略图技术，将指定窗口实时镜像到独立的悬浮窗口，支持不透明度、点击穿透、1:1 / 1/2 / 1/4 / 拉伸缩放
-  - **指定显示器**：获取系统显示器列表，将主窗口移动到指定显示器（适配工控机多显示器场景）
-  - **虚拟显示器**：基于 Parsec VDD 添加/移除虚拟显示器，内置驱动安装包，可静默安装驱动，解决分屏器无法区分多显示器的问题
-- **调试工具**：
-  - **远程指令服务**：内嵌 HTTP 服务，提供 `/exec` 执行远程 Shell 命令、`/health` 健康检查，支持 PowerShell/CMD 自动探测、超时控制、日志记录
-  - **扫描局域网设备**：打开设置页时静默自动检测本机子网（仅填入输入框，失败不弹窗），优先调用 `nmap.exe`（sidecar 方式，放置于可执行文件同目录或系统 PATH），回退为并发 Ping 扫描 `/24` 网段并解析 ARP 表，以表格形式展示在线/离线设备（类似 Advanced IP Scanner）
-- **主题切换**：明亮/暗黑主题
-- **多语言**：中文/英文界面
-- **托盘驻留**：点击关闭按钮最小化到系统托盘，右键托盘图标可选择“显示界面 / 关于 / 退出”
-
-## 技术栈
-
-- **前端**：Vanilla HTML/JS/CSS（无框架依赖）
-- **后端**：Rust + Tauri 2.x
-- **图像压缩**：ravif (AVIF 编码) + image (BMP/PNG/JPEG 解码)
-- **文件监控**：notify crate
-
-## 开发环境
-
-- [Rust](https://rustup.rs/) (建议最新稳定版)
-- [Node.js](https://nodejs.org/) (用于 Tauri CLI)
-- [VS Code](https://code.visualstudio.com/) + [Tauri 插件](https://marketplace.visualstudio.com/items?itemName=tauri-apps.tauri-vscode) + [rust-analyzer](https://marketplace.visualstudio.com/items?itemName=rust-lang.rust-analyzer)
-
-## 构建
-
-### 开发模式
+## 运行方式
 
 ```bash
-cd CameraViewerTauri/src-tauri
-cargo tauri dev
+java -jar camera-viewer-1.0.0-fat_*.jar
 ```
 
-### 生产构建（带时间戳后缀）
+或双击 `camera-viewer-1.0.0-fat_*.jar`。
+
+## 构建方式
+
+项目完全离线构建，依赖均已放在 `libs/` 目录。
+
+### 一键打包（推荐）
+
+运行项目根目录的打包脚本，会自动构建并在项目根目录生成带时间戳的 fat jar：
 
 ```bash
-cd CameraViewerTauri
-bash build-with-timestamp.sh
+./build-with-timestamp.sh
 ```
 
-或直接构建：
+构建成功后例如生成 `camera-viewer-1.0.0-fat_2608272356.jar`。
+
+### 手动构建
 
 ```bash
-cd CameraViewerTauri/src-tauri
-cargo build --release
+gradle-dist/gradle-9.7.1/bin/gradle fatJar --offline
 ```
 
-构建产物位于 `src-tauri/target/release/camera-viewer-tauri.exe`
+产物位于 `build/libs/camera-viewer-1.0.0-fat.jar`，可手动复制到项目根目录。
 
-### 离线编译（使用 cargo vendor）
+## 配置文件
 
-项目已配置 `cargo vendor`，在无网络环境下：
+首次运行后会在 jar 同目录生成 `camera-viewer-config.json`，包含 4 个格子的：
+
+- 名称、启用状态
+- MQTT broker 地址与端口
+- Client ID
+- 图像/数据/日志订阅话题
+- JavaScript 脚本
+- 显示选项
+- 全局：启动时最大化
+- 全局：无图像数据时显示 `imgs/calibboard.jpg` 占位图（按 5120×5120 坐标系）
+
+## 脚本入口
+
+每个格子的脚本必须定义 `process(message)` 函数。`message` 为 JavaScript 对象，字段随消息类型不同：
+
+### 图像消息
+
+```javascript
+{
+  timestamp: "202608271857890",
+  imageHeight: 5120,
+  imageWidth: 5120,
+  productNumber: 1,
+  surfaceNumber: 1,
+  imageData: "...base64..."
+}
+```
+
+> **面号与格子对应关系**：图像、测量数据、日志三类消息均会根据 `surfaceNumber` 自动分发到对应格子，即格子 1 只处理面 1 的消息，格子 2 只处理面 2 的消息，以此类推。非本格面号的消息不会刷新该格画面，也不会清空已有绘制内容。
+
+```javascript
+{
+  timestamp: "202608271857890",
+  imageHeight: 5120,
+  imageWidth: 5120,
+  productNumber: 1,
+  surfaceNumber: 1,
+  baseLineLeftPointX: 10.0,
+  baseLineLeftPointY: 500.0,
+  baseLineRightPointX: 502.0,
+  baseLineRightPointY: 500.0,
+  leftPointX: 50.0,
+  leftPointY: 250.0,
+  rightPointX: 462.0,
+  rightPointY: 250.0,
+  productWidth: 412.0,
+  topPointX: 256.0,
+  topPointY: 50.0,
+  productHeight: 450.0,
+  symmetry: 0.12
+}
+```
+
+### 日志消息
+
+```javascript
+{
+  timestamp: "202608271857890",
+  imageHeight: 5120,
+  imageWidth: 5120,
+  productNumber: 1,
+  surfaceNumber: 1,
+  message: "检测完成"
+}
+```
+
+## XML 消息格式
+
+MQTT 实际收发的消息为 XML 文本。建议每类消息都使用显式根元素；旧版无根元素的 XML 也会被自动兼容（内部会先包裹一层 `<root>` 再解析）。
+
+### 图像消息
+
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<ImageMessage>
+  <TimeStamp>202608271857890</TimeStamp>
+  <ImageHeight>9344</ImageHeight>
+  <ImageWidth>7000</ImageWidth>
+  <ProductNumber>1</ProductNumber>
+  <SurfaceNumber>1</SurfaceNumber>
+  <ImageData>...</ImageData>
+</ImageMessage>
+```
+
+- `ImageData` 为图像的 base64 编码字符串，留空或省略时将按设置显示占位图。
+
+### 测量数据消息
+
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<DataMessage>
+  <TimeStamp>202608271857890</TimeStamp>
+  <ImageHeight>7000</ImageHeight>
+  <ImageWidth>9344</ImageWidth>
+  <ProductNumber>1</ProductNumber>
+  <SurfaceNumber>1</SurfaceNumber>
+  <BaseLineLeftPointX>10.0</BaseLineLeftPointX>
+  <BaseLineLeftPointY>500.0</BaseLineLeftPointY>
+  <BaseLineRightPointX>502.0</BaseLineRightPointX>
+  <BaseLineRightPointY>500.0</BaseLineRightPointY>
+  <LeftPointX>50.0</LeftPointX>
+  <LeftPointY>250.0</LeftPointY>
+  <RightPointX>462.0</RightPointX>
+  <RightPointY>250.0</RightPointY>
+  <ProductWidth>412.0</ProductWidth>
+  <TopPointX>256.0</TopPointX>
+  <TopPointY>50.0</TopPointY>
+  <ProductHeight>450.0</ProductHeight>
+  <Symmetry>0.12</Symmetry>
+</DataMessage>
+```
+
+### 日志消息
+
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<LogMessage>
+  <TimeStamp>202608271857890</TimeStamp>
+  <ImageHeight>7000</ImageHeight>
+  <ImageWidth>9344</ImageWidth>
+  <ProductNumber>1</ProductNumber>
+  <SurfaceNumber>1</SurfaceNumber>
+  <Message>检测完成</Message>
+</LogMessage>
+```
+
+## 内置脚本函数
+
+坐标系为左手坐标系，原点位于图像左上角，X 向右，Y 向下。
+
+### 绘图函数
+
+| 函数 | 签名 |
+|---|---|
+| `PlotString` | `PlotString(imgW, imgH, x, y, text, fontSize, rgb)` |
+| `PlotLine` | `PlotLine(imgW, imgH, x1, y1, x2, y2, thickness, rgb)` |
+| `PlotCircle` | `PlotCircle(imgW, imgH, cx, cy, diameter, thickness, rgb)` |
+| `PlotPolygon` | `PlotPolygon(imgW, imgH, [x0, y0, x1, y1, ...], thickness, rgb)` |
+| `PlotPoint` | `PlotPoint(imgW, imgH, x, y, thickness, rgb)` |
+
+`rgb` 可以是整数（如 `0xFF0000`）或十六进制字符串（如 `"#FF0000"`）。
+
+### 图像与工具函数
+
+| 函数 | 签名 | 说明 |
+|---|---|---|
+| `ShowImage` | `ShowImage(base64)` | 设置当前格子显示的图像。 |
+| `SaveImage` | `SaveImage(base64, path)` | 将 base64 图片直接解码保存到指定路径，支持 `data:image/xxx;base64,` 前缀；目录不存在时自动创建。 |
+| `SaveRenderedImage` | `SaveRenderedImage(path)` | 保存当前格子中**已渲染的图像**（底图 + 脚本叠加图形），输出为 JPG，质量 95%；目录不存在时自动创建。 |
+| `GetTimeStamp` | `GetTimeStamp(format)` | 返回当前时间字符串，`format` 与 Java `DateTimeFormatter` 格式一致，为空时默认 `yyyyMMdd_HHmmss`。 |
+| `Clear` | `Clear()` | 清除当前格子的图像与脚本叠加图形。 |
+
+`SaveRenderedImage` 保存的是调用时刻格子中已显示的画面。如果在处理 `IMAGE` 消息的 `process(message)` 中调用，保存的是上一帧（当前帧底图尚未刷新到界面）；在 `DATA`/`LOG` 消息中调用或配合按钮触发时，可保存当前已渲染画面。
+
+## 图像操作
+
+每个格子的图像区域支持：
+
+- **适合**：图像完整适应显示区域。
+- **最大化**：按实际像素大小（1:1）显示。
+- **放大 / 缩小**：以画布中心为基准缩放。
+- **鼠标滚轮**：以鼠标指针位置为中心缩放。
+- **鼠标拖拽**：缩放后可拖拽平移图像。
+
+缩放比例在画布左上角实时显示。
+
+## 示例脚本
+
+```javascript
+function process(message) {
+    if (message.imageData) {
+        ShowImage(message.imageData)
+    }
+    if (message.productWidth !== undefined) {
+        PlotString(512, 512, 10, 30,
+            "宽度: " + message.productWidth.toFixed(2), 24, 0x00FF00)
+        PlotLine(512, 512,
+            message.leftPointX, message.leftPointY,
+            message.rightPointX, message.rightPointY,
+            3, 0xFF0000)
+    }
+}
+```
+
+### 保存图像示例
+
+```javascript
+function process(message) {
+    if (message.imageData) {
+        ShowImage(message.imageData)
+    }
+    if (message.productWidth !== undefined) {
+        PlotString(512, 512, 10, 30,
+            "宽度: " + message.productWidth.toFixed(2), 24, 0x00FF00)
+
+        // 保存叠加了绘制内容的渲染图
+        var ts = GetTimeStamp("yyyyMMdd_HHmmss")
+        SaveRenderedImage("D:/snap/render_" + ts + ".jpg")
+
+        // 也可以直接保存原始 base64 图像
+        // SaveImage(message.imageData, "D:/snap/raw_" + ts + ".jpg")
+    }
+}
+```
+
+## MQTT 测试推送
+
+项目附带 `test_mqtt_publish.py`，可用于向软件推送测试数据。脚本会根据目标格子自动设置对应的面号（格子 0 对应面 1，格子 1 对应面 2，以此类推），因此 `--all-grids` 会同时测试 4 个面的独立显示：
 
 ```bash
-cd CameraViewerTauri/src-tauri
-cargo build --release --offline
+# 同时向 4 个格子推送面 1-4 的图像、数据、日志（推荐）
+python test_mqtt_publish.py --host 127.0.0.1 --port 8907 --all-grids --all
+
+# 推送全部三类消息到指定格子（默认格子 0 / 面 1，图像使用 imgs/test1.jpg）
+python test_mqtt_publish.py --host 127.0.0.1 --port 8907 --grid 0 --all
+
+# 仅推送图像
+python test_mqtt_publish.py --host 127.0.0.1 --port 8907 --grid 0 --image
+
+# 使用脚本生成的测试图像
+python test_mqtt_publish.py --host 127.0.0.1 --port 8907 --grid 0 --image --generated
+
+# 图像消息不含 ImageData，触发占位图显示
+python test_mqtt_publish.py --host 127.0.0.1 --port 8907 --grid 0 --image --no-image-data
+
+# 循环推送 5 次
+python test_mqtt_publish.py --host 127.0.0.1 --port 8907 --grid 0 --all --loop 5
+
+# 同时向 4 个格子循环推送 3 轮
+python test_mqtt_publish.py --host 127.0.0.1 --port 8907 --all-grids --all --loop 3
 ```
 
-vendor 目录位于 `src-tauri/vendor/`，包含所有依赖 crate。
+依赖：`paho-mqtt`、`Pillow`。
 
-## 项目结构
+## VisionMaster 脚本推送
 
-```
-CameraViewerTauri/
-├── src/                          # 前端代码
-│   ├── index.html               # 主页面（设置弹窗、关于页面等）
-│   ├── main.js                  # 前端逻辑
-│   ├── styles.css               # 样式（含明亮/暗黑主题）
-│   ├── i18n.js                  # 国际化（zh/en）
-│   └── assets/                  # 图标资源
-├── src-tauri/                   # Rust 后端
-│   ├── src/
-│   │   ├── main.rs             # 入口
-│   │   ├── lib.rs              # 核心逻辑（命令、文件监控、图像压缩等）
-│   │   ├── display.rs          # 窗口镜像与显示器管理
-│   │   ├── virtual_display.rs  # 基于 Parsec VDD 的虚拟显示器管理
-│   │   └── debug_tools.rs      # 远程指令服务与局域网设备扫描
-│   ├── binaries/               # 嵌入式第三方二进制（Parsec VDD 安装包）
-│   ├── Cargo.toml              # Rust 依赖
-│   ├── tauri.conf.json         # Tauri 配置
-│   ├── capabilities/           # 权限配置
-│   └── vendor/                 # cargo vendor 离线依赖
-└── build-with-timestamp.sh     # 带时间戳构建脚本
-```
+项目附带 `UserScript_VM42.cs`，用于在 VisionMaster 流程中将图像与测量数据通过 MQTT 推送到本软件显示。
 
-## 配置说明
+### 脚本输入
 
-配置文件自动保存在系统应用数据目录（Windows: `%LOCALAPPDATA%/com.camera.helper/`）
+在 VisionMaster 脚本模块中按以下顺序绑定输入：
 
-| 配置文件 | 说明 |
-|---------|------|
-| `CameraConfig.json` | 相机数量、延时、各相机 URL、备注及锁定状态 |
-| `TransformConfig.json` | 文件转存规则配置 |
-| `CleanConfig.json` | 图片清理策略配置 |
-| `CompressConfig.json` | 图像压缩参数配置 |
-| `CompressCheckpoint.json` | 压缩进度检查点（断电续传） |
-| `FtpConfig.json` | FTP 服务器配置（端口、TLS、用户等） |
-| `NtpConfig.json` | NTP 时间服务器配置（端口等） |
-| `JobxBackupConfig.json` | JOBX 相机备份配置 |
-| `AppConfig.json` | 主题、语言等应用设置 |
+| 输入 | VM 类型 | 说明 |
+|---|---|---|
+| `in0` | IMAGE | 待显示的图像 |
+| `in1` | INT | 配方号 ProductNumber |
+| `in2` | INT | 面号 SurfaceNumber |
+| `in3` | POINT | 测量点（取第一个点的 PointX/PointY） |
+| `in4` | DOUBLE | 对称度 Symmetry |
+| `in5` | DOUBLE | 高度 ProductHeight |
+| `in6` | DOUBLE | 宽度 ProductWidth |
 
-## 版本记录
+### 依赖引用
 
-- **26.9.16**
-  - 修复相机网格"锁定/解锁"按钮点击无反应的问题（前端调用签名错位），并将锁定状态持久化到 `CameraConfig.json`，重启后自动恢复
-  - 修复打开设置页时弹出"扫描局域网设备失败"的问题：子网探测改为静默预填，失败不弹窗；同时修复中文 Windows 下 `ipconfig` 输出中 IPv4 带 `(首选)` 后缀导致子网解析失败的问题
-- **26.7.31 / 26.7.25** 及更早版本：功能迭代（FTP 自动递归创建目录、显示设置、调试工具、Advance IP Scanner 复刻、安全设置、JOBX 备份、窗口镜像、虚拟显示器等）
+在 VisionMaster 脚本模块的 DLL 引用中添加：
 
-## 许可证
+- `OpenCvSharp.dll`
+- `M2Mqtt.Net.dll`（可参考 `D:\JustStupid\mqttx图片自定义显示_2608172137\M2Mqtt.Net.dll`）
 
-MIT License
+### 发布内容
+
+脚本每次执行会连接 MQTT broker（默认 `127.0.0.1:8907`），并依次发布三类 XML 消息：
+
+- `/autoweld/measure/image/raw`：JPEG 编码的图像 base64
+- `/autoweld/measure/data/raw`：测量数据（以输入点为中心，根据宽高推算左右测量点、顶点与基线端点）
+- `/autoweld/measure/logs/raw`：检测完成日志
+
+消息格式与本软件 `XML 消息格式` 章节一致，可直接被默认脚本解析并绘制测量结果。
+
+## 常见问题
+
+1. **FlatLaf native access 警告**：不影响运行。如需消除，可添加 JVM 参数 `--enable-native-access=ALL-UNNAMED`。
+2. **MQTT 连接失败**：检查 broker 地址、端口、网络连通性及防火墙设置。
+3. **图像不显示**：确认 XML 中 `ImageData` 字段为有效 base64 字符串，且脚本中调用了 `ShowImage` 或默认脚本已启用。
